--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,7 @@ work_url: # work page URL
 x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
+strava_userid: nathan7402 #your strava username
 
 contact_note: >
   The best way to reach me is via email or LinkedIn.
