--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ zotero_username: # your zotero username
 strava_userid: nathan7402 #your strava username
 
 contact_note: >
-  The best way to reach me is via email or LinkedIn.
+  The best way to reach me is via email or LinkedIn. I post most often on Strava.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -132,8 +132,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: nathan's thoughts # blog_name will be displayed in your blog page
+blog_description: still figuring out what this is
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -167,13 +167,13 @@ disqus_shortname: al-folio # put your disqus shortname
 # External sources.
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
-  - name: Google Blog
-    posts:
-      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: 2024-05-14
+ external_sources:
+#  - name: medium.com
+#    rss_url: https://medium.com/@al-folio/feed
+#  - name: Google Blog
+#    posts:
+#      - url: https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
+#        published_date: 2024-05-14
 
 # -----------------------------------------------------------------------------
 # Newsletter
